--- a/templates/concept2/concept2.1.html
+++ b/templates/concept2/concept2.1.html
@@ -26,7 +26,7 @@
     <div class="container spectral-regular">
       <div class="row">
         <div class="col-md-12">
-          <h2>Example of Symmetry</h2>
+          <h2 style="margin-top: -28px">Example of Symmetry</h2>
         </div>
       </div>
 
