--- a/templates/concepts-about/concept3.html
+++ b/templates/concepts-about/concept3.html
@@ -26,7 +26,7 @@
     <div class="container spectral-regular">
       <div class="row">
         <div class="col-md-12">
-          <h2>{{ concept.header }}</h2>
+          <h2 style="margin-top: -38px">{{ concept.header }}</h2>
         </div>
       </div>
 
@@ -36,6 +36,7 @@
           <img
             src="{{ url_for('static', filename='images/chi-ex1.png') }}"
             class="image img-fluid"
+            style="margin-bottom: -18px"
           />
         </div>
         <div class="col-md-2"></div>
@@ -44,7 +45,7 @@
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-          <p class="mt-0">{{ concept.text }}</p>
+          <p style="margin-top: -40px">{{ concept.text }}</p>
         </div>
         <div class="col-md-2"></div>
       </div>
