--- a/static/css/home.css
+++ b/static/css/home.css
@@ -4,12 +4,12 @@
   width: 100%;
   max-width: 1200px; /* Set max width to prevent content from becoming too wide */
   margin: 50px auto; /* Center the container horizontally with more space from top */
-  padding: 30px; /* Add more padding for better spacing */
   box-sizing: border-box; /* Include padding in the width */
   font-family: "Spectral", serif;
 }
 
 .homepage-banner {
+  margin: 0% 28% 0%;
   background-color: #dbd6d3ff;
   display: flex;
   flex-direction: vertical;
@@ -23,6 +23,9 @@
   margin-bottom: 50px;
 }
 
+.home-text {
+  font-size: 16px;
+}
 #feng-shui-chinese {
   color: #c0a99f;
   margin-bottom: 20px;
@@ -42,19 +45,33 @@
   font-size: 18px;
   cursor: pointer;
   margin: 40px 0px 80px;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-
 }
 
 .learn-button:hover {
   /*box-shadow: #cfb7a1ff 3px solid;*/
-  transform: translateY(-5px);
-  box-shadow: 0px 5px 15px #cfb7a1ff; 
-
+  box-shadow: 2px 2px 10px #cfb7a1ff;
 }
 
 .authors {
   color: #666;
+}
+
+button {
+  font-size: 20px;
+  background-color: #cfb7a1ff;
+  color: white;
+  padding: 10px 20px 10px 20px;
+  border: none;
+  border-radius: 10px !important;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+.learn-about {
+  font-size: 18px;
+  line-height: 32px;
 }
 
 .btn-block {
@@ -68,5 +85,5 @@
 
 .btn-block:hover {
   transform: translateY(-5px);
-  box-shadow: 0px 5px 15px #cfb7a1ff; 
+  box-shadow: 0px 5px 15px #cfb7a1ff;
 }
