--- a/templates/concept3/concept3.4.html
+++ b/templates/concept3/concept3.4.html
@@ -19,7 +19,7 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     />
 
-    <link
+    <links
       href="https://fonts.googleapis.com/css2?family=Spectral&display=swap"
       rel="stylesheet"
     />
@@ -31,15 +31,17 @@
 
     <div class="container spectral-regular">
       <div class="row">
-        <h1 class="examples-header">Self-Check: Chi & Mirror</h1>
+        <h1 style="font-size: 28px; margin: -1% 0% -5% 2%">
+          Self-Check: Chi & Mirror
+        </h1>
       </div>
 
       <div class="row">
         <div class="col-md-8">
-          <div class="row">
+          <div class="row" style="margin-left: 1px">
             <img
               src="{{ url_for('static', filename='images/chi-self-check.png') }}"
-              style="width: 800px"
+              style="width: 790px"
               id="chi-selfcheck"
             />
           </div>
@@ -54,7 +56,7 @@
           </div>
         </div>
 
-        <div class="col-md-4 chi-txt-and-mirror">
+        <div class="col-md-4">
           <div class="text-center">
             <img
               src="{{ url_for('static', filename='images/mirror.png') }}"
