--- a/templates/concepts-about/concept2.html
+++ b/templates/concepts-about/concept2.html
@@ -26,7 +26,7 @@
     <div class="container spectral-regular">
       <div class="row">
         <div class="col-md-12">
-          <h2>{{ concept.header }}</h2>
+          <h2 style="margin-top: -28px">{{ concept.header }}</h2>
         </div>
       </div>
 
