challenge quiz imgs, top-margin quiz fixxes

--- a/templates/quizzes/quiz2.html
+++ b/templates/quizzes/quiz2.html
@@ -29,7 +29,7 @@
     <div class="container spectral-regular">
       <div class="row">
         <h1 class="examples-header"
-        style="font-size: 25px; margin-left: 40px; margin-top: 50px; margin-bottom: 50px">
+        style="font-size: 25px; margin-left: 40px; margin-bottom: 50px">
         Second, choose <b>complementary furniture</b> so we have <b>symmetry and balance</b> in the bedroom.
         </h1>
       </div>
