--- a/templates/quizzes/quiz3.html
+++ b/templates/quizzes/quiz3.html
@@ -32,7 +32,7 @@
     <div class="container spectral-regular">
       <div class="row">
         <h1 class="examples-header"
-            style="font-size: 25px; margin-left: 40px; margin-top: 50px; margin-bottom: 50px">
+            style="font-size: 25px; margin-left: 40px;margin-bottom: 50px">
             Third, <b>move the mirror</b> to a location that will <b>boost positive chi </b>throughout the room.
         </h1>
       </div>
