--- a/templates/quizzes/quiz1.html
+++ b/templates/quizzes/quiz1.html
@@ -32,7 +32,7 @@
     <div class="container spectral-regular">
       <div class="row">
         <h1 class="examples-header"
-        style="font-size: 25px; margin-left: 40px; margin-top: 50px; margin-bottom: 50px">
+        style="font-size: 25px; margin-left: 40px; margin-bottom: 50px">
         First, move the bed to <b>(1) command position</b> and <b>(2) allows for symmetry</b> of bedside furniture.
         </h1>
       </div>
