--- a/templates/quizzes/quiz4.html
+++ b/templates/quizzes/quiz4.html
@@ -32,7 +32,7 @@
     <div class="container spectral-regular">
         <div class="row">
             <h1 class="examples-header"
-            style="font-size: 25px; margin-left: 40px; margin-top: 50px; margin-bottom: 50px">
+            style="font-size: 25px; margin-left: 40px; margin-bottom: 50px">
                 Fourth, select the <b>best rug</b> to place under the bed.
             </h1>
         </div>
