/quiz6 challenge question done

--- a/templates/feng-shui-achieved.html
+++ b/templates/feng-shui-achieved.html
@@ -46,7 +46,7 @@
 
       <div class="row center" style="margin-left: 240px; margin-right: 240px">
         <div class="col-md-3 d-flex justify-content-end" style="margin-left: 440px">
-          <button onclick="window.location.href='/quiz8'">Next</button>
+          <button onclick="window.location.href='/congrats'">Next</button>
         </div>
       </div>
     </div>
