--- a/templates/quizzes/quiz6.html
+++ b/templates/quizzes/quiz6.html
@@ -1,99 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
     <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     <script src="{{ url_for('static', filename='scripts/quiz6.js') }}"></script>
-
     <link rel="stylesheet" href="../static/css/main.css" />
-    <link rel="stylesheet" href="../static/css/quiz1.css" />
-    <link
-      rel="stylesheet"
-      href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-    />
-
-    <link
-      href="https://fonts.googleapis.com/css2?family=Spectral&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="../static/css/quiz6.css" />
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Spectral&display=swap" rel="stylesheet" />
     <title>Quiz: Challenge Question</title>
-  </head>
-  <body>
-    <!--Include the navbar using Flask-->
+</head>
+<body>
     {% include 'navbar.html' %}
-
     <div class="container spectral-regular">
         <div class="row">
-            <h1 class="examples-header" style="font-size: 25px; margin-left: 40px; margin-bottom: 50px">
+            <h1 class="examples-header" style="font-size: 25px; margin-left: 40px; margin-bottom: 30px;">
                 <b>Challenge question!</b> Drag and drop the <b>desk</b> to a <b>command position</b> in the room.
             </h1>
             <div class="text-center text-bubble3" style="display: none;" id="feedback-message"></div>
         </div>
-
         <div class="row">
-          <div class="col-md-8">
-            <div class="row">
-              <img
-                src="{{ url_for('static', filename='images/challenge-room.png') }}"
-                style="width: 500px"
-                id="chi-selfcheck"
-              />
+            <div class="col-md-8">
+                <div class="row">
+                    <div class="challenge-room droppable" id="chi-selfcheck" style="position: relative;">
+                        <div class="correct-div" style="position: absolute; top: 0; height: 50%; width: 100%;"></div>
+                        <img src="{{ url_for('static', filename='images/challenge-room.png') }}" style="width: 500px; margin-left: 40px" />
+                        <div class="incorrect-div" style="position: absolute; bottom: 0; height: 50%; width: 100%;"></div>
+                    </div>
+                </div>
             </div>
-            <div class="row">
-              <div class="col-md-4">
-                <div class="droppable incorrect-div"></div>
-              </div>
-              <div class="col-md-4">
-                <div class="droppable correct-div"></div>
-              </div>
-              <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <div class="text-center">
+                    <img src="{{ url_for('static', filename='images/desk.png') }}" class="draggable" id="desk" style="width: 60px" />
+                </div>
+                <button id="next-concept-button" class="next-button" style="display: none; margin-left: 205px; margin-top: 100px; padding: 10px" onclick="window.location.href='/feng-shui-achieved';">
+                    Next
+                </button>
+                <button id="try-again-button" class="try-button" style="display: none; margin-left: 175px; margin-top: 100px; padding: 10px" onclick="location.reload();">
+                    Try again
+                </button>
             </div>
-          </div>
-  
-          <div class="col-md-4 chi-txt-and-mirror">
-            <div class="text-center">
-              <img
-                src="{{ url_for('static', filename='images/desk.png') }}"
-                class="draggable"
-                id="desk"
-                style="width: 90px"
-              />
-            </div>
-            <button
-              id="next-concept-button"
-              class="next-button"
-              style="display: none; margin-top: 20px; padding: 10px"
-            >
-              Next Concept
-            </button>
-            <button
-              id="try-again-button"
-              class="try-button"
-              style="display: none; margin-top: 10px; padding: 10px"
-            >
-              Try again
-            </button>
-          </div>
         </div>
     </div>
-
-<!-- 
-        <div class="col-md-4">
-            <div class="text-center">
-                <img src="{{ url_for('static', filename='images/quiz-bed.png') }}" class="draggable bed-img">
-            </div>
-            <div class="text-center text-bubble3">Drag and drop the bed to the command position.</div>
-            <button id="next-question-button" class="next-button" style="display: none; margin-top: 10px;">Next Question</button>
-            <button id="try-again-button" class="try-button" style="display: none; margin-top: 10px"> Try again </button>
-        </div>
-      </div>
-    </div> -->
-  </body>
+</body>
 </html>
