--- a/templates/quizzes/quiz5.html
+++ b/templates/quizzes/quiz5.html
@@ -7,6 +7,7 @@
     <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     <script src="{{ url_for('static', filename='scripts/quiz5.js') }}"></script>
+    <script src="{{ url_for('static', filename='scripts/quizScore.js') }}"></script>
 
     <link rel="stylesheet" href="../static/css/main.css" />
     <link rel="stylesheet" href="../static/css/quiz5.css" />
