--- a/templates/quizzes/quiz6.html
+++ b/templates/quizzes/quiz6.html
@@ -26,9 +26,9 @@
             <div class="col-md-8">
                 <div class="row">
                     <div class="challenge-room droppable" id="chi-selfcheck" style="position: relative;">
-                        <div class="correct-div" style="position: absolute; top: 0; height: 50%; width: 100%;"></div>
+                        <div class="incorrect-div" style="position: absolute; top: 0; height: 50%; width: 100%;"></div>
                         <img src="{{ url_for('static', filename='images/challenge-room.png') }}" style="width: 500px; margin-left: 40px" />
-                        <div class="incorrect-div" style="position: absolute; bottom: 0; height: 50%; width: 100%;"></div>
+                        <div class="correct-div" style="position: absolute; bottom: 0; height: 50%; width: 100%;"></div>
                     </div>
                 </div>
             </div>
