console print on quiz pages for score

--- a/templates/quizzes/quiz2.html
+++ b/templates/quizzes/quiz2.html
@@ -133,5 +133,11 @@
         </div>
       </div>
     </div>
+    <script>
+      $(document).ready(function() {
+        var currentScore = getScore(); // Retrieve the final score
+        console.log(currentScore);
+      });
+    </script>
   </body>
 </html>
