--- a/templates/quizzes/quiz3.html
+++ b/templates/quizzes/quiz3.html
@@ -87,5 +87,11 @@
         </div>
       </div>
     </div>
+    <script>
+      $(document).ready(function() {
+        var currentScore = getScore(); // Retrieve the final score
+        console.log(currentScore);
+      });
+    </script>
   </body>
 </html>
