--- a/templates/quizzes/quiz4.html
+++ b/templates/quizzes/quiz4.html
@@ -64,5 +64,11 @@
             </div>                    
         </div>
     </div>
+    <script>
+      $(document).ready(function() {
+        var currentScore = getScore(); // Retrieve the final score
+        console.log(currentScore);
+      });
+    </script>
   </body>
 </html>
