--- a/templates/congrats.html
+++ b/templates/congrats.html
@@ -23,7 +23,7 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     />
 
-    <title>Feng Shui Achieved</title>
+    <title>Quiz Results</title>
   </head>
   <body>
     <!--Include the navbar using Flask-->
@@ -33,8 +33,8 @@
       <div class="row">
         <div class="col-md-12 center">
           <p style="margin-bottom: 5px;">You got</p>
-          <h3 style="color: darkgreen; font-weight: bold;"><span id="quiz-score"></span>/5 correct</h3>
-          <p>on the first try!</p>
+          <h3 style="color: #83a29d; font-weight: bold;"><span id="quiz-score"></span>/6 correct</h3>
+          <p style="margin-bottom: 50px">on the first try!</p>
         </div>
       </div>
 
@@ -56,9 +56,12 @@
     </div>
     <script>
       $(document).ready(function() {
-        var finalScore = getScore(); // Retrieve the final score
-        console.log(finalScore);
-        $("#quiz-score").text(finalScore); // Display the score on the page
+       // var finalScore = getScore(); // Retrieve the final score
+     //   console.log(finalScore);
+     //   $("#quiz-score").text(finalScore); // Display the score on the page
+        console.log(score);
+        $("#quiz-score").text(score);
+        resetScore();
 
         // Reset the score when the "Collect and return home" button is clicked
         $("#return-home").click(function() {
