--- a/templates/quizzes/quiz6.html
+++ b/templates/quizzes/quiz6.html
@@ -6,6 +6,8 @@
     <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     <script src="{{ url_for('static', filename='scripts/quiz6.js') }}"></script>
+    <script src="{{ url_for('static', filename='scripts/quizScore.js') }}"></script>
+    
     <link rel="stylesheet" href="../static/css/main.css" />
     <link rel="stylesheet" href="../static/css/quiz6.css" />
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
