Aligned Command Position header

--- a/templates/concept1/concept1.1.html
+++ b/templates/concept1/concept1.1.html
@@ -25,9 +25,11 @@
 
     <div class="container spectral-regular">
       <div class="row">
-        <div class="col-md-12">
-          <h2 style="padding: 10px">Command Position</h2>
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <h2 style="margin-left: 80px">Command Position</h2>
         </div>
+        <div class="col-md-2"></div>
       </div>
 
       <div class="row">
