--- a/templates/concept2/concept2.5.html
+++ b/templates/concept2/concept2.5.html
@@ -28,7 +28,9 @@
 
     <div class="container spectral-regular">
       <div class="row">
-        <h1 class="examples-header">Self-check: Symmetry</h1>
+        <h1 class="examples-header" style="margin-top: -28px">
+          Self-check: Symmetry
+        </h1>
       </div>
 
       <div class="row">
