--- a/templates/concept1/concept1.1.html
+++ b/templates/concept1/concept1.1.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
 
     <link rel="stylesheet" href="../static/css/main.css" />
-    <link rel="stylesheet" href="../static/css/concept1.css" />
+    <link rel="stylesheet" href="../static/css/concept2.css" />
     <link
       rel="stylesheet"
       href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
@@ -17,7 +17,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     />
-    <title>Concept 1: Command Position</title>
+    <title>Concept 2: Symmetry</title>
   </head>
   <body>
     <!--Include the navbar using Flask-->
@@ -25,33 +25,49 @@
 
     <div class="container spectral-regular">
       <div class="row">
+        <div class="col-md-12">
+          <h2 style="margin-top: -28px; margin-bottom: -10%">
+            Command Position
+          </h2>
+        </div>
+      </div>
+
+      <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-          <h2 style="margin-left: 80px">Command Position</h2>
+          <img
+            src="{{ url_for('static', filename='images/command-2.png') }}"
+            class="image img-fluid"
+          />
         </div>
         <div class="col-md-2"></div>
       </div>
 
       <div class="row">
         <div class="col-md-2"></div>
-        <div class="col-md-8 center">
-          <img src="{{ url_for('static', filename='images/command-2.png') }}" style="width: 400px; margin-top: 30px"/>
+        <div class="col-md-8">
+          <p class="mt-0">
+            Second, the bed should not be directly in line with the door because
+            this exposes the sleeper to all the energy and activities coming in
+            from the door, which disturbs rest.
+          </p>
         </div>
         <div class="col-md-2"></div>
       </div>
 
-      <div class="row center">
-        <div class="col-md-3"></div>
-        <div class="col-md-6 d-flex justify-content-end" style="margin-top: 30px">
-          <p>Second, the bed should not be directly in line with the door because this exposes the sleeper to all the energy and activities coming in from the door, which disturbs rest. 
-          </p>
+      <div class="row">
+        <div class="col-md-6">
+          <button onclick="window.location.href='/concept1'" class="prev-btn">
+            < Prev
+          </button>
         </div>
-        <div class="col-md-3 d-flex justify-content-end" style="margin-left: 200px">
-          <button onclick="window.location.href='/concept1'" style="margin-right: 20px">< Prev</button>
-          <button onclick="window.location.href='/concept1-2'">Next ></button>
+
+        <div class="col-md-6">
+          <button onclick="window.location.href='/concept1-2'" class="next-btn">
+            Next >
+          </button>
         </div>
       </div>
-
     </div>
   </body>
 </html>
