--- a/templates/concept3/concept3.2.html
+++ b/templates/concept3/concept3.2.html
@@ -26,7 +26,7 @@
     <div class="container spectral-regular">
       <div class="row">
         <div class="col-md-12">
-          <h2 style="margin-top: -28px">Example of Mirror Placement for Chi</h2>
+          <h2 style="margin-top: -28px">Mirror Placement for Chi</h2>
         </div>
       </div>
 
