/learn button fixes

--- a/templates/learn.html
+++ b/templates/learn.html
@@ -48,7 +48,7 @@
                 onclick="window.location.href='/concept1'"
                 class="btn-block"
               >
-                Command
+                Command Position
               </button>
             </div>
             <div class="col-md-6 mt-4">
@@ -61,18 +61,18 @@
             </div>
             <div class="col-md-6 mt-4">
               <button
-                onclick="window.location.href='/concept4'"
-                class="btn-block"
-              >
-                Earth
-              </button>
-            </div>
-            <div class="col-md-6 mt-4">
-              <button
                 onclick="window.location.href='/concept3'"
                 class="btn-block"
               >
                 Chi
+              </button>
+            </div>
+            <div class="col-md-6 mt-4">
+              <button
+                onclick="window.location.href='/concept4'"
+                class="btn-block"
+              >
+                Earth Element
               </button>
             </div>
           </div>
