green, red-text on all concept.css pages

--- a/static/css/concept1.css
+++ b/static/css/concept1.css
@@ -66,3 +66,13 @@ button:hover {
 .next-btn {
   margin-left: 30%;
 }
+
+.green-text {
+  color: #19676B;
+  font-weight: bold;
+}
+
+.red-text {
+  color: #E06666;
+  font-weight: bold;
+}
