--- a/static/css/concept3.css
+++ b/static/css/concept3.css
@@ -76,10 +76,10 @@ button:hover {
 
 .green-text {
   color: #19676b;
-  font-weight: bolder;
+  font-weight: bold;
 }
 
 .red-text {
   color: #e06666;
-  font-weight: bolder;
+  font-weight: bold;
 }
