--- a/templates/concept1/concept1.1.html
+++ b/templates/concept1/concept1.1.html
@@ -48,8 +48,8 @@
         <div class="col-md-8">
           <p class="mt-0">
             Second, the bed should not be directly in line with the door because
-            this exposes the sleeper to all the energy and activities coming in
-            from the door, which disturbs rest.
+            this <span class="red-text">exposes the sleeper</span> to all the energy and activities coming in
+            from the door, which <span class="red-text">disturbs rest.</span>
           </p>
         </div>
         <div class="col-md-2"></div>
