--- a/templates/concept1/concept1.2.html
+++ b/templates/concept1/concept1.2.html
@@ -47,8 +47,8 @@
         <div class="col-md-2"></div>
         <div class="col-md-8">
           <p class="mt-0">
-            Avoid the “coffin position” where the feet of the bed are facing the
-            door because it resembles how we carry the dead in a coffin.
+            Avoid the “coffin position” where the <span class="red-text">feet of the bed are facing the
+            door</span> because it <span class="red-text">resembles how we carry the dead in a coffin.</span>
           </p>
         </div>
         <div class="col-md-2"></div>
