--- a/templates/concept3/concept3.3.html
+++ b/templates/concept3/concept3.3.html
@@ -45,9 +45,9 @@
         <div class="col-md-2"></div>
         <div class="col-md-8">
           <p class="mt-0">
-            <span style="font-weight: bolder">No window?</span>Place your mirror
-            in front of something that brings you
-            <span class="green-text">(e.g. art) to double the good chi.</span>
+            <span style="font-weight: bolder">No window?</span> Place your mirror
+            in front of something that brings you joy, such as art, 
+            <span class="green-text">to double the good chi.</span>
           </p>
         </div>
         <div class="col-md-2"></div>
