done done :) text clearer

--- a/templates/concept1/concept1.1.html
+++ b/templates/concept1/concept1.1.html
@@ -47,9 +47,9 @@
         <div class="col-md-2"></div>
         <div class="col-md-8">
           <p class="mt-0">
-            Second, the bed should not be directly in line with the door because
-            this <span class="red-text">exposes the sleeper</span> to all the energy and activities coming in
-            from the door, which <span class="red-text">disturbs rest.</span>
+            The bed should not be directly in line with the door, because
+            this <span class="red-text">exposes the sleeper</span> to all of the energy and activities 
+            outside of the door, <span class="red-text">disturbing rest.</span>
           </p>
         </div>
         <div class="col-md-2"></div>
