--- a/templates/concept2/concept2.1.html
+++ b/templates/concept2/concept2.1.html
@@ -46,8 +46,8 @@
         <div class="col-md-8">
           <p class="mt-0">
             To attain symmetry, have
-            <span class="green-text">objects in pairs</span> (e.g. nightstands)
-            on each side of the bed.
+            <span class="green-text">objects in pairs</span>
+            on each side of the bed. Take these nightstands for example.
           </p>
         </div>
         <div class="col-md-2"></div>
