--- a/templates/concept3/concept3.2.html
+++ b/templates/concept3/concept3.2.html
@@ -45,10 +45,7 @@
         <div class="col-md-2"></div>
         <div class="col-md-8">
           <p class="mt-0">
-            A mirror directly facing door
-            <span class="red-text">
-              reflects energy outside or pushes away energy</span
-            > rather than welcoming chi into the room.
+            A mirror facing directly towards a door <span class="red-text">reflects energy outward,</span> which can push away chi instead of welcoming it into the room.
           </p>
         </div>
         <div class="col-md-2"></div>
@@ -63,7 +60,7 @@
 
         <div class="col-md-6">
           <button onclick="window.location.href='/concept3-3'" class="next-btn">
-            Next
+            Next >
           </button>
         </div>
       </div>
