--- a/templates/concept3/concept3.3.html
+++ b/templates/concept3/concept3.3.html
@@ -62,7 +62,7 @@
 
         <div class="col-md-6">
           <button onclick="window.location.href='/concept3-4'" class="next-btn">
-            Next
+            Self-check >
           </button>
         </div>
       </div>
