--- a/templates/concept4/concept4.1.html
+++ b/templates/concept4/concept4.1.html
@@ -47,8 +47,8 @@
       <div class="row center" style="margin-left: 240px; margin-right: 240px">
         <p>Clay and terracotta are found in earthy <b>colors</b> like <b>beige, brown, red,</b> and <b>orange,</b> which evoke feelings of <b>warmth</b> and <b>comfort.</b></p>
         <div class="col-md-3 d-flex justify-content-end" style="margin-left: 500px">
-          <button onclick="window.location.href='/concept4'" style="margin-right: 500px;">Prev</button>
-          <button onclick="window.location.href='/concept4-2'">Next</button>
+          <button onclick="window.location.href='/concept4'" style="margin-right: 460px; white-space: nowrap;">< Prev</button>
+          <button onclick="window.location.href='/concept4-2'" style="white-space: nowrap;">Next ></button>
         </div>
       </div>
     </div>
