--- a/templates/concept4/concept4.2.html
+++ b/templates/concept4/concept4.2.html
@@ -45,10 +45,10 @@
       </div>
 
       <div class="row center" style="margin-left: 240px; margin-right: 240px">
-        <p>However, <span class="red-text">avoid metal</span> objects in the bedroom as the metal element <span class="red-text">clashes</span> with earth. Too much metal energy is associated with feelings of <span class="red-text">being weighed down.</span></p>
+        <p>However, <span class="red-text">avoid metal</span> objects in the bedroom as the metal element <span class="red-text">clashes with earth.</span> Too much metal energy is associated with feelings of being <span class="red-text">weighed down.</span></p>
         <div class="col-md-3 d-flex justify-content-end" style="margin-left: 500px">
-          <button onclick="window.location.href='/concept4-1'" style="margin-right: 500px;">Prev</button>
-          <button onclick="window.location.href='/concept4-3'">Next</button>
+          <button onclick="window.location.href='/concept4-1'" style="margin-right: 460px; white-space: nowrap;">< Prev</button>
+          <button onclick="window.location.href='/concept4-3'" style="white-space: nowrap;">Next ></button>
         </div>
       </div>
     </div>
