--- a/templates/concept4/concept4.3.html
+++ b/templates/concept4/concept4.3.html
@@ -47,8 +47,8 @@
       <div class="row center" style="margin-left: 240px; margin-right: 240px">
         <p>Choose <b>cotton</b> or <b>wool rugs</b> of balanced shapes to further boost groundedness and stability in your bedroom.</p>
         <div class="col-md-3 d-flex justify-content-end" style="margin-left: 500px">
-          <button onclick="window.location.href='/concept4-2'" style="margin-right: 500px;">Prev</button>
-          <button onclick="window.location.href='/concept4-4'">Next</button>
+          <button onclick="window.location.href='/concept4-2'" style="margin-right: 460px; white-space: nowrap;">< Prev</button>
+          <button onclick="window.location.href='/concept4-4'" style="white-space: nowrap;">Next ></button>
         </div>
       </div>
     </div>
