--- a/templates/concept4/concept4.4.html
+++ b/templates/concept4/concept4.4.html
@@ -47,8 +47,8 @@
       <div class="row center" style="margin-left: 240px; margin-right: 240px">
         <p>Choose <span class="green-text">cotton</span> or <span class="green-text">wool rugs</span> of balanced shapes to further boost groundedness and stability in your bedroom.</p>
         <div class="col-md-3 d-flex justify-content-end" style="margin-left: 500px">
-          <button onclick="window.location.href='/concept4'" style="margin-right: 350px; white-space: nowrap;">< Review Concept</button>
-          <button onclick="window.location.href='/concept4-5'" style="white-space: nowrap;">Self-check ></button>
+          <button onclick="window.location.href='/concept4-3'" style="margin-right: 410px; white-space: nowrap;">< Prev</button>
+          <button onclick="window.location.href='/concept4-5'" style="margin-right: 10px; white-space: nowrap;">Self-check ></button>
         </div>
       </div>
     </div>
