--- a/templates/concepts-about/concept2.html
+++ b/templates/concepts-about/concept2.html
@@ -56,7 +56,7 @@
             onclick="window.location.href='/concept2-1'"
             class="responsive-btn"
           >
-            Next
+            Next >
           </button>
         </div>
       </div>
