--- a/templates/concepts-about/concept4.html
+++ b/templates/concepts-about/concept4.html
@@ -48,7 +48,7 @@
         <p>The <b>earth</b> element in feng shui is believed to bring <b>stability</b> and <b>grounding energy</b> to the bedroom.</p>
         <p>Incorporate the earth element with <b>natural materials</b> like <b>wool, cotton, clay,</b> and <b>terracotta,</b> which are considered “earthy” because of their <b>origin from organic sources</b> and <b>tactile texture.</b></p>
         <div class="col-md-3 d-flex justify-content-end" style="margin-left: 500px">
-          <button onclick="window.location.href='/concept4-1'">Next</button>
+          <button onclick="window.location.href='/concept4-1'">Next ></button>
         </div>
       </div>
     </div>
