--- a/templates/concept1/concept1.2.html
+++ b/templates/concept1/concept1.2.html
@@ -48,7 +48,7 @@
         <div class="col-md-8">
           <p class="mt-0">
             Avoid the “coffin position” where the <span class="red-text">feet of the bed are facing the
-            door</span> because it <span class="red-text">resembles how we carry the dead in a coffin.</span>
+            door,</span> because it <span class="red-text">resembles how we carry the dead in a coffin.</span>
           </p>
         </div>
         <div class="col-md-2"></div>
@@ -63,7 +63,7 @@
 
         <div class="col-md-6">
           <button onclick="window.location.href='/concept1-3'" class="next-btn">
-            Next >
+            Self-check >
           </button>
         </div>
       </div>
